k8s/base/timelog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timelog
spec:
  selector:
    app: timelog
  ports:
    - port: 8003
      targetPort: 8003
